[tool.poetry]
name = "e04go"
version = "0.0.1"
description = ""
authors = ["QQ <jeremy55688@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
